--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "server": "^1.0.19",
     "shards-react": "^1.0.3",
     "styled-components": "^4.3.2",
-    "web-request": "^1.0.7"
+    "web-request": "^1.0.7",
+    "webpack": "^4.39.1"
   },
   "scripts": {
     "start": "react-scripts start",
